# Mnemosyne

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_cmake.yml
assets/app_resource/: resource.rc
cmake/: assets.cmake  qt.cmake  sources.cmake
src/mne_ui_qt/: CMakeLists.txt  assets.cpp  assets.h  main.cpp  sound_test.cpp  sound_test.h  sound_test.ui  window.cpp  window.h  window.ui
